# Pandascore-etl-pipeline

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.superset  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
common/: logging_config.py  minio_client.py  settings.py
configs/: log_config.json  superset_config.py  webserver_config.py
configs/clickhouse_config/config.d/: production.xml
dags/: cybersport_etl_dag.py
etl/: extract.py  load.py  models.py  transform.py
requirements/: base.txt
sql/: init-airflow.sql  init.sql
tests/: test_integration.py
tests/content/: matches.json
