[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersport-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "etl*"]
