[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersport-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-connect>=1.3.0",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
airflow = [
    "tenacity>=9.1.4",
    "requests>=2.34.2",
    "minio>=7.2.20",
    "pydantic>=2.13.4",
    "apache-airflow>=3.1.8",
    "apache-airflow-providers-standard>=1.14.0",
]
superset = [
    "redis>=8.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
]
dev = [
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
]
test = [
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "etl*", "dags*"]
